ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Journey_Stage__c</fullName>
    <label>Journey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Details</fullName>
            </value>
            <value>
                <fullName>Capture current residential address</fullName>
            </value>
            <value>
                <fullName>Capture permanent residential address</fullName>
            </value>
            <value>
                <fullName>Capture PAN or Other KYC</fullName>
            </value>
            <value>
                <fullName>Capture Dedupe</fullName>
            </value>
            <value>
                <fullName>Vehicle Dedupe</fullName>
            </value>
            <value>
                <fullName>Declared Income/Required Loan Amount</fullName>
            </value>
            <value>
                <fullName>Bank Account Check</fullName>
            </value>
            <value>
                <fullName>Gatting And Screening</fullName>
            </value>
            <value>
                <fullName>Current Residential Address</fullName>
            </value>
            <value>
                <fullName>Perment Residential Address</fullName>
            </value>
            <value>
                <fullName>Demographic Details</fullName>
            </value>
            <value>
                <fullName>Office Address for primary Income Source</fullName>
            </value>
            <value>
                <fullName>Income Details</fullName>
            </value>
            <value>
                <fullName>Run EMI Engine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>