ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Latest_Task_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Task_Created_Date__c</fullName>
    <label>Latest Task Created Date</label>
    <type>DateTime</type>
</CustomField>