ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <formula>Opportunity__r.Lead_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id</label>
    <type>Text</type>
</CustomField>