ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Legal_Entity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Identifier__c</fullName>
    <label>Legal Entity Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>