ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/LegalEntityIdentifier__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityIdentifier__c</fullName>
    <label>Legal Entity Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>