ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Literacy__c.field-meta.xml
<CustomField>
    <fullName>Literacy__c</fullName>
    <label>Literacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Literate</fullName>
            </value>
            <value>
                <fullName>Illiterate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>