ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Loans__c.field-meta.xml
<CustomField>
    <fullName>Loans__c</fullName>
    <label>#Loans</label>
    <summaryForeignKey>Existing_EMI__c.Applicant_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>