ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/LTV_applicable_as_per_ORP__c.field-meta.xml
<CustomField>
    <fullName>LTV_applicable_as_per_ORP__c</fullName>
    <label>LTV applicable as per ORP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>