ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/LTV_with_Insurance__c.field-meta.xml
<CustomField>
    <fullName>LTV_with_Insurance__c</fullName>
    <label>LTV with Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>