ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/LTV_without_insurance__c.field-meta.xml
<CustomField>
    <fullName>LTV_without_insurance__c</fullName>
    <label>LTV without insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>