ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Marital_status__c.field-meta.xml
<CustomField>
    <fullName>Marital_status__c</fullName>
    <label>Marital status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIVOR</fullName>
                <label>DIVORCE</label>
            </value>
            <value>
                <fullName>DVRCE</fullName>
                <label>DIVORCEE</label>
            </value>
            <value>
                <fullName>MARR</fullName>
                <label>MARRIED</label>
            </value>
            <value>
                <fullName>SINGP</fullName>
                <label>SINGLE PARENT</label>
            </value>
            <value>
                <fullName>UNMAR</fullName>
                <label>UN MARRIED</label>
            </value>
            <value>
                <fullName>WIDOW</fullName>
            </value>
            <value>
                <fullName>WIDWR</fullName>
                <label>WIDOWER</label>
            </value>
            <value>
                <fullName>Divorced</fullName>
                <isActive>false</isActive>
                <label>Divorced</label>
            </value>
            <value>
                <fullName>Married</fullName>
                <isActive>false</isActive>
                <label>Married</label>
            </value>
            <value>
                <fullName>SINGLE</fullName>
                <isActive>false</isActive>
                <label>SINGLE</label>
            </value>
            <value>
                <fullName>Single Parent</fullName>
                <isActive>false</isActive>
                <label>Single Parent</label>
            </value>
            <value>
                <fullName>Widower</fullName>
                <isActive>false</isActive>
                <label>Widower</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>