ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Name_of_Recipient_s_bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Recipient_s_bank__c</fullName>
    <label>Name of Recipient&apos;s bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State Bank of India (SBI)</fullName>
            </value>
            <value>
                <fullName>Punjab National Bank</fullName>
            </value>
            <value>
                <fullName>Union Bank of India</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Central Bank of India</fullName>
            </value>
            <value>
                <fullName>Indian Bank</fullName>
            </value>
            <value>
                <fullName>Indian Overseas Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Maharashtra</fullName>
            </value>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>IDBI Bank</fullName>
            </value>
            <value>
                <fullName>Yes Bank</fullName>
            </value>
            <value>
                <fullName>Kotak Mahindra Bank</fullName>
            </value>
            <value>
                <fullName>IndusInd Bank</fullName>
            </value>
            <value>
                <fullName>Federal Bank</fullName>
            </value>
            <value>
                <fullName>IDFC First Bank</fullName>
            </value>
            <value>
                <fullName>Jammu and Kashmir Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>