ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Name_Ref_1__c.field-meta.xml
<CustomField>
    <fullName>Name_Ref_1__c</fullName>
    <label>Name Ref 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>