ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Net_banking_log_in_Id__c.field-meta.xml
<CustomField>
    <fullName>Net_banking_log_in_Id__c</fullName>
    <label>Net banking log in Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>