ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/No_of_Documents__c.field-meta.xml
<CustomField>
    <fullName>No_of_Documents__c</fullName>
    <label>No of Documents</label>
    <summaryForeignKey>Documents__c.Applicant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>