ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Nominee_address__c.field-meta.xml
<CustomField>
    <fullName>Nominee_address__c</fullName>
    <label>Nominee address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>