ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Nominee_available__c.field-meta.xml
<CustomField>
    <fullName>Nominee_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nominee available</label>
    <type>Checkbox</type>
</CustomField>