ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Nominee_DOB__c.field-meta.xml
<CustomField>
    <fullName>Nominee_DOB__c</fullName>
    <label>Nominee DOB</label>
    <type>Date</type>
</CustomField>