ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Nominee_pin_code__c.field-meta.xml
<CustomField>
    <fullName>Nominee_pin_code__c</fullName>
    <label>Nominee pin code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>