ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Nominee_State__c.field-meta.xml
<CustomField>
    <fullName>Nominee_State__c</fullName>
    <label>Nominee State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>