ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/of_EMIs_paid_till_now_Existing_loan__c.field-meta.xml
<CustomField>
    <fullName>of_EMIs_paid_till_now_Existing_loan__c</fullName>
    <label># of EMIs paid till now ?(Existing loan)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>