ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/of_family_members_residing_with_you__c.field-meta.xml
<CustomField>
    <fullName>of_family_members_residing_with_you__c</fullName>
    <label># of family members residing with you</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>&gt;5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>