ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/of_loans_taken_in_the_past__c.field-meta.xml
<CustomField>
    <fullName>of_loans_taken_in_the_past__c</fullName>
    <label># of loans taken in the past</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>&gt;4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>