ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Office_PinCode__c.field-meta.xml
<CustomField>
    <fullName>Office_PinCode__c</fullName>
    <label>Office PinCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>