ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Office_State__c.field-meta.xml
<CustomField>
    <fullName>Office_State__c</fullName>
    <label>Office State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>