ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Other_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Other_Obligation__c</fullName>
    <label>Other Obligation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>