ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/PACS_Member__c.field-meta.xml
<CustomField>
    <fullName>PACS_Member__c</fullName>
    <label>PACS Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>