ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/PACS_Name__c.field-meta.xml
<CustomField>
    <fullName>PACS_Name__c</fullName>
    <label>PACS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>