ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/PAN_CIN_Match__c.field-meta.xml
<CustomField>
    <fullName>PAN_CIN_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAN CIN Match</label>
    <type>Checkbox</type>
</CustomField>