ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/PAN_CIN_Message__c.field-meta.xml
<CustomField>
    <fullName>PAN_CIN_Message__c</fullName>
    <description>In this field we will store the message returned by gattingPanCinCheck of Apex Class.</description>
    <label>PAN CIN Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>