ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Passport_Back_Upload_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Passport_Back_Upload_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Passport Back Upload Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>