ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Password_for_pdf_protected_statement__c.field-meta.xml
<CustomField>
    <fullName>Password_for_pdf_protected_statement__c</fullName>
    <label>Password for pdf protected statement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>