ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Payment_Req_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Req_Date__c</fullName>
    <formula>Opportunity__r.Payment_Request_Generation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursement Date</label>
    <type>Date</type>
</CustomField>