ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Permanent_Address_Not_Present__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Not_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Address Not Present</label>
    <type>Checkbox</type>
</CustomField>