ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Permit_Validity__c.field-meta.xml
<CustomField>
    <fullName>Permit_Validity__c</fullName>
    <label>Permit Validity</label>
    <type>Date</type>
</CustomField>