ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Phone_Number_Ref_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Ref_2__c</fullName>
    <label>Phone Number Ref 2</label>
    <type>Phone</type>
</CustomField>