ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/PID_Block__c.field-meta.xml
<CustomField>
    <fullName>PID_Block__c</fullName>
    <description>This field will store the PID block for Biometric API.</description>
    <label>PID Block</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>