ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/PID_Block_Error_Response__c.field-meta.xml
<CustomField>
    <fullName>PID_Block_Error_Response__c</fullName>
    <description>This field will store the PID Block Error Response of Biometric API.</description>
    <label>PID Block Error Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>