ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/PID_Block_Request__c.field-meta.xml
<CustomField>
    <fullName>PID_Block_Request__c</fullName>
    <label>PID Block Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>