ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Pincode_Ref_1__c.field-meta.xml
<CustomField>
    <fullName>Pincode_Ref_1__c</fullName>
    <label>Pincode Ref 1</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>