ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Pincode_Ref_2__c.field-meta.xml
<CustomField>
    <fullName>Pincode_Ref_2__c</fullName>
    <label>Pincode Ref 2</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>