ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/POA_Holder__c.field-meta.xml
<CustomField>
    <fullName>POA_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POA Holder</label>
    <type>Checkbox</type>
</CustomField>