ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Preferred_address_for_communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_address_for_communication__c</fullName>
    <label>Preferred address for communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residence Address</fullName>
            </value>
            <value>
                <fullName>Office Address</fullName>
            </value>
            <value>
                <fullName>Permanent Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>