ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADVOCATE</fullName>
            </value>
            <value>
                <fullName>AGRICULTURE PRODUCE</fullName>
            </value>
            <value>
                <fullName>AGRICULTURIST</fullName>
            </value>
            <value>
                <fullName>ASSOCIATION</fullName>
            </value>
            <value>
                <fullName>AUTO CONSULTANT</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILE ANCILLARY</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILE DEALERS</fullName>
            </value>
            <value>
                <fullName>AUTOMOBILE MANUFACTURER</fullName>
            </value>
            <value>
                <fullName>BAKERY</fullName>
            </value>
            <value>
                <fullName>BANK EMPLOYEE</fullName>
            </value>
            <value>
                <fullName>BAR OWNER</fullName>
            </value>
            <value>
                <fullName>BEAUTY PARLOR</fullName>
            </value>
            <value>
                <fullName>BLDG. CONTRACTOR</fullName>
            </value>
            <value>
                <fullName>BLUE METAL</fullName>
            </value>
            <value>
                <fullName>BROKER</fullName>
            </value>
            <value>
                <fullName>BUILDER</fullName>
            </value>
            <value>
                <fullName>CABLE</fullName>
            </value>
            <value>
                <fullName>CEMENT</fullName>
            </value>
            <value>
                <fullName>CERAMICS</fullName>
            </value>
            <value>
                <fullName>CHARTERED ACCOUNTANT</fullName>
            </value>
            <value>
                <fullName>CHEMICALS AND DYES</fullName>
            </value>
            <value>
                <fullName>CHIT COMPANY</fullName>
            </value>
            <value>
                <fullName>CLINIC</fullName>
            </value>
            <value>
                <fullName>COAL MINING</fullName>
            </value>
            <value>
                <fullName>COFFEE AND TEA</fullName>
            </value>
            <value>
                <fullName>COLLECTION AGENCY</fullName>
            </value>
            <value>
                <fullName>COMMISSION AGENCY</fullName>
            </value>
            <value>
                <fullName>COMPUTER PERIPHERAL DEALER</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION COMPANY</fullName>
            </value>
            <value>
                <fullName>CONSULTANTS OPERATING FROM RESIDENCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>