ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Pwd__c.field-meta.xml
<CustomField>
    <fullName>Pwd__c</fullName>
    <label>Pwd</label>
    <length>15</length>
    <type>Text</type>
</CustomField>