ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Register_for_WhatsApp_Banking__c.field-meta.xml
<CustomField>
    <fullName>Register_for_WhatsApp_Banking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register for WhatsApp Banking</label>
    <type>Checkbox</type>
</CustomField>