ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Relationship_Since__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Since__c</fullName>
    <label>Relationship Since</label>
    <type>Date</type>
</CustomField>