ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>BUSINESS ENTITY REGISTERED IN INDIA</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>RESIDENT INDIAN INDIVIDUAL</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>BUSINESS ENTITY REGISTERED OUTSIDE INDIA</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>FOREIGN / NON RESIDENT INDIVIDUAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>